[package]
name = "deduplicator-scan"
version = "0.1.0"
edition = "2021"
authors = ["Torbjørn Birch Moltu <tbm@torbmol.no>"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.1.1", features=["derive"]}
sha2 = {version="0.10.6", features=["asm"]}
thread-priority = "0.10.0"

[target.'cfg(target_os="linux")'.dependencies]
ioprio = "0.2.0"
