[package]
name = "deduplicator-scan"
version = "0.1.0"
edition = "2021"
authors = ["Torbjørn Birch Moltu <tbm@torbmol.no>"]
license = "GPL-3.0-or-later"
default-run = "deduplicator-scan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6.0"
clap = {version="4.1.1", features=["derive"]}
is-terminal = "0.4.2"
rusqlite = "0.28.0" # blob feature is for streaming blobs, which I don't need
sha2 = {version="0.10.6", features=["asm"]}
term_size = "0.3.2"
thread-priority = "0.10.0"

[target.'cfg(target_os="linux")'.dependencies]
ioprio = "0.2.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
